deploy_demo_application/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  selector:
    matchLabels:
      app: frontend-pod
  template:
    metadata:
      labels:
        app: frontend-pod
    spec:
      containers:
        - name: frontend-container
          image: panyakorn130547/snappy-chat-frontend:0.1
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend-pod
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3000
