deploy_demo_application/mongodb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-statefulset
spec:
  serviceName: mongodb-statefulset
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-pod
  template:
    metadata:
      labels:
        app: mongodb-pod
    spec:
      containers:
        - name: mongo-container
          image: mongodb/mongodb-community-server:7.0.23-ubi9
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-data
              mountPath: /data/db

  volumeClaimTemplates:
    - metadata:
        name: mongodb-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi

---
apiVersion: v1
kind: Service
metadata:
  name: database-service
spec:
  selector:
    app: mongodb-pod
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 27017
